// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fab组件 快照测试 基本使用 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm ldsEo"
>
  <button
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw kWCfde sinoui-fab"
=======
  className="TestWrapper__Container-wrvnwl-0 dOXECa"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 iYvaYV sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 指定不同颜色 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm ldsEo"
>
  <button
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw kWCfde sinoui-fab"
=======
  className="TestWrapper__Container-wrvnwl-0 dOXECa"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 iYvaYV sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
<<<<<<< HEAD
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw jhhbNl sinoui-fab"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 bZCLEy sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="secondary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
<<<<<<< HEAD
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw ffMyGg sinoui-fab"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 gqJmAz sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="error"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
<<<<<<< HEAD
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw dHMiHJ sinoui-fab"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 DtGvm sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="warning"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
<<<<<<< HEAD
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw iPJUhd sinoui-fab"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 bLWXOy sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="info"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
<<<<<<< HEAD
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw hiMClN sinoui-fab"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 iAwAES sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="success"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
<<<<<<< HEAD
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw ejyzpA sinoui-fab"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 jPmPzn sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="actionActive"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
<<<<<<< HEAD
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw fAOBvW sinoui-fab"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 dLqzsl sinoui-fab"
>>>>>>> origin/bottomNavigation
    color="actionDisabled"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置不可用状态 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm ldsEo"
>
  <button
    aria-disabled={true}
    className="sc-AxirZ doobDZ sinoui-base-button sc-AxiKw kWCfde sinoui-fab sinoui-fab--disabled"
=======
  className="TestWrapper__Container-wrvnwl-0 dOXECa"
>
  <button
    aria-disabled={true}
    className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button Fab-egtp6t-0 iYvaYV sinoui-fab sinoui-fab--disabled"
>>>>>>> origin/bottomNavigation
    color="primary"
    disabled={true}
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置扩展样式 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm ldsEo"
>
  <button
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw bVrGpJ sinoui-fab sinoui-fab--extended"
=======
  className="TestWrapper__Container-wrvnwl-0 dOXECa"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 geba-DK sinoui-fab sinoui-fab--extended"
>>>>>>> origin/bottomNavigation
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置较小显示 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm ldsEo"
>
  <button
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw fjSMTS sinoui-fab sinoui-fab--mini"
=======
  className="TestWrapper__Container-wrvnwl-0 dOXECa"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Fab-egtp6t-0 ibsFwV sinoui-fab sinoui-fab--mini"
>>>>>>> origin/bottomNavigation
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;
